# ragify

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.tika  Dockerfile.tika.local  LICENSE  README.it.md  README.md  TODO.md  add_urls_to_qdrant.py  config.yaml  docker-compose.local.yaml  docker-compose.yml  docs_server.py  list_indexed_docs.py  local_docs_url_generator.py  mcp_server.py  pyproject.toml  query_ragdocs.py  ragify.py  requirements.txt  reset_qdrant.py  test_ragdocs.py
.claude/: README.md
.claude/commands/: build.md  commit.md  push-ghcr.md  release.md
.github/workflows/: release.yml
api/: __init__.py  auth.py  main.py  oauth.py
api/middleware/: auth_middleware.py
api/routes/: collections.py  mcp.py  search.py  system.py  upload.py
docker/: entrypoint.sh  healthcheck.sh  qdrant_config.yaml  users.yaml.example
docs/: MCP_SETUP.md  QUICK_GUIDE.md  RAGIFY.md  README.md
frontend/: index.html
frontend/static/: app.js  style.css
installer/: Makefile  README.md  go.mod  go.sum  main.go
lib/: __init__.py  chunking.py  config.py  doctor.py  embedding.py  file_utils.py  qdrant_operations.py  text_cleaning.py  tika_check.py
lib/extractors/: __init__.py  tika_extractor.py
lib/mcp/: __init__.py  server.py
scripts/: check_i18n_sync.py
src/ragify_mcp/: README.md  __init__.py  __main__.py  embedding.py  server.py
