[project]
name = "ragify-mcp"
version = "1.0.1"
description = "MCP Server for RAG documentation search with Qdrant and Ollama"
readme = "src/ragify_mcp/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "rag", "qdrant", "ollama", "semantic-search", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
    "requests>=2.31.0",
]

[project.scripts]
ragify-mcp = "ragify_mcp:main"

[project.urls]
Homepage = "https://github.com/strawberry-code/self-hosted-llm-rag"
Repository = "https://github.com/strawberry-code/self-hosted-llm-rag"
Documentation = "https://github.com/strawberry-code/self-hosted-llm-rag/blob/main/docs/MCP_SETUP.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragify_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ragify_mcp/",
    "pyproject.toml",
    "LICENSE",
]
